Removing unnecessary parts.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -230,7 +230,7 @@
                     default login remains as 'root'. Tip: leave field empty to skip setting a device name.
                 </td>
                 <td class="middle"><label for="name">New Device Name:</label></td>
-                <td class="right"><input type="text" id="name" name="name" class="textbox"></td>
+                <td class="right"><input type="text" id="name" name="name" class="textbox" disabled></td>
             </tr>
         </table>
     </div>
