--- a/src/public/index.html
+++ b/src/public/index.html
@@ -218,29 +218,16 @@
 </div>
 <!-- errors will go here -->
 <form id="setup_form" name="setup_form" method="POST" action="submitForm" onsubmit="saveFields()">
-    <div id="name_section" class="section">
-        <div class="header">Change Device Name</div>
-        <table class="content">
-            <tr>
-                <td class="left">
-                    This changes the device and access point name (must be at least 5 characters). The
-                    default login remains as 'root'. Tip: leave field empty to skip setting a device name.
-                </td>
-                <td class="middle"><label for="name">New Device Name:</label></td>
-                <td class="right"><input type="text" id="name" name="name" class="textbox" disabled></td>
-            </tr>
-        </table>
-    </div>
     <div id="wifi_section" class="section">
         <div class="header">Connect to a WiFi Network</div>
         <table class="content">
-            <tr>
+            <tr>sssssssssssssssssssssssssssssssssssssssssssssssssssssss
                 <td class="left">
                     Connect to a wireless network by entering the required information.
                 </td>
                 <td class="middle">
                     <table style="padding-top: 15px">
-                        <tr><td id="ssidlabel" style="display: inline">
+                        <tr><td id="ssidlabel" style="display: inline">sssssssssssssssssssssssssssssss
                             Network Name:</td></tr>
                         <tr><td id="protocollabel" style="display: none">
                             Network Protocol:</td></tr>
