Something went very wrong.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -221,13 +221,13 @@
     <div id="wifi_section" class="section">
         <div class="header">Connect to a WiFi Network</div>
         <table class="content">
-            <tr>sssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            <tr>
                 <td class="left">
                     Connect to a wireless network by entering the required information.
                 </td>
                 <td class="middle">
                     <table style="padding-top: 15px">
-                        <tr><td id="ssidlabel" style="display: inline">sssssssssssssssssssssssssssssss
+                        <tr><td id="ssidlabel" style="display: inline">
                             Network Name:</td></tr>
                         <tr><td id="protocollabel" style="display: none">
                             Network Protocol:</td></tr>
