created configure_tage, which is a functionally similar (albeit seriously pared down) version of configure_edison.  Added (as of now, useless) tunnel ip portion to status page.

--- a/src/public/status.html
+++ b/src/public/status.html
@@ -18,5 +18,11 @@
             <td class="infoline_column infoline_right">params_ip</td>
         </tr>
     </table>
+    <table class="infoline">
+        <tr>
+            <td class="infoline_column infoline_left">Tunnel IP Address:</td>
+            <td class="infoline_column infoline_right">tun_params_ip</td>
+        </tr>
+    </table>
 </body>
 </html>
