--- a/src/public/index.html
+++ b/src/public/index.html
@@ -210,8 +210,7 @@
     <table>
         <tr>
             <td class="menuitem" style="background-color: lightgrey">
-                <a href="/" style="text-decoration: none; color: #0062a8">Configure</a>
-
+                <a href="/" style="text-decoration: none; color: #0062a8">Configure</a>y
             </td>
         </tr>
     </table>
