removed password html; comment out print from configure_tage; modify install.sh to account for configure_tage.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -205,12 +205,12 @@
     </noscript>
 </head>
 <body>
-<a href="/" style="text-decoration: none"><h1>Edison Setup</h1></a>
+<a href="/" style="text-decoration: none"><h1>TagE Setup</h1></a>
 <div class="menu">
     <table>
         <tr>
             <td class="menuitem" style="background-color: lightgrey">
-                <a href="/" style="text-decoration: none; color: #0062a8">Configure</a>y
+                <a href="/" style="text-decoration: none; color: #0062a8">Configure</a>
             </td>
         </tr>
     </table>
