removed unnecessary file; experimenting.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -216,6 +216,24 @@
     </table>
 </div>
 <!-- errors will go here -->
+<form id="scan_form" name="scan_form" method="GET" action="scan">
+  <div id="wifi_section" class="section">
+      <div class="header">Rescan for wireless networks</div>
+      <table class="content">
+          <tr>
+              <td class="left">
+                  Rescans for wireless networks.  If the networks
+              </td>
+              <td class="middle">
+                <!-- Nothing goes in the middle as of now -->
+              </td>
+              <td class="right">
+                  <input class="submit_button" type="submit" value="Rescan">
+              </td>
+          </tr>
+      </table>
+  </div>
+</form>
 <form id="setup_form" name="setup_form" method="POST" action="submitForm" onsubmit="saveFields()">
     <div id="wifi_section" class="section">
         <div class="header">Connect to a WiFi Network</div>
