--- a/src/public/404.html
+++ b/src/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Edison Setup</title>
+    <title>TagE Setup</title>
 </head>
 <body>
 <p>Page not found.
