--- a/src/public/index.html
+++ b/src/public/index.html
@@ -216,13 +216,13 @@
     </table>
 </div>
 <!-- errors will go here -->
-<form id="scan_form" name="scan_form" method="GET" action="scan">
+<form id="scan_form" name="scan_form" method="GET" action="scan.html">
   <div id="wifi_section" class="section">
       <div class="header">Rescan for wireless networks</div>
       <table class="content">
           <tr>
               <td class="left">
-                  Rescans for wireless networks.  If the networks
+                  Rescans for wireless networks.
               </td>
               <td class="middle">
                 <!-- Nothing goes in the middle as of now -->
