--- a/src/public/scan.html
+++ b/src/public/scan.html
@@ -52,8 +52,7 @@
     </div>
 </div>
 <div class='section'>
-    <div class="content" id="errbox" style="padding: 30px; padding-bottom: 0px; padding-top: 0px; display: none">
-    </div>
+    <div class="content" id="errbox" style="padding: 30px; padding-bottom: 0px; padding-top: 0px; display: none"></div>
 </div>
 </body>
 </html>
