--- a/src/public/status.html
+++ b/src/public/status.html
@@ -21,7 +21,7 @@
     <table class="infoline">
         <tr>
             <td class="infoline_column infoline_left">Tunnel IP Address:</td>
-            <td class="infoline_column infoline_right">tun_params_ip</td>
+            <td class="infoline_column infoline_right">tunnel_ip</td>
         </tr>
     </table>
 </body>
