--- a/src/public/index.html
+++ b/src/public/index.html
@@ -263,7 +263,7 @@
                     <input type="text" id="newwifi" name="newwifi" class="textbox" style="display: none">
                     <select id="newwifis" name="newwifis" class="selector" onchange="setSsidsRelatedFields()"
                             style="display: inline-block">
-                        <option selected="selected">Networks</option>
+                        <option selected="selected"></option>
                     </select>
                     <select id="protocol" name="protocol" class="selector" style="display: none"
                             onchange="displayWiFiInputs(document.getElementById('protocol').value)">
