--- a/src/public/404.html
+++ b/src/public/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TagE Setup</title>
+    <title>TagE Setup 404</title>
 </head>
 <body>
-<p>Page not found.
+  <p>Page not found.
 </body>
 </html>
