--- a/src/public/exit.html
+++ b/src/public/exit.html
@@ -14,7 +14,7 @@
             config.ssid = 'params_ssid';
             config.newwifi = 'params_new_wifi';
             initFeedbackLib(config);
-            //queryForCommandOutput();
+            queryForCommandOutput();
         }
     </script>
     <noscript>
