--- a/src/public/exit.html
+++ b/src/public/exit.html
@@ -28,7 +28,7 @@
         Please wait while we setup your device. Note that if WiFi is being setup, <b>the device will disconnect
         momentarily. When that happens, please reconnect by joining <i>this</i> machine to the 'params_new_wifi'
         network</b> and wait while we try to reach your device at
-        <a href="http://params_hostname">http://params_hostname</a>.
+        <a href="http://params_hostname/status.html">http://params_hostname</a>.
         <br><br>
 
         <hr class="progressbar" id="progressbar" align="left">
