scan should be get, not post

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -280,7 +280,7 @@
     </table>
 </div>
 <!-- errors will go here -->
-<form id="scan_form" name="scan_form" method="POST" action="scan">
+<form id="scan_form" name="scan_form" method="GET" action="scan">
   <div id="rescan_section" class="section">
       <div class="header">Rescan for wireless networks</div>
       <table class="content">
